# xianyu

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md
.claude/: settings.json
.claude/agents/: bug-hunter.md  code-reviewer.md  docs-writer.md  prompt-optimizer.md  refactorer.md  security-auditor.md  test-writer.md
.claude/commands/: benchmark.md  daily-standup.md  fix-ci.md  review-module.md  run-module.md
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/db/: base.py  session.py
backend/app/modules/: __init__.py
backend/app/modules/model_gateway/: __init__.py  capabilities.py  cost_calculator.py  errors.py  gateway.py  router.py  schema.py
backend/app/modules/model_gateway/config/: purpose_routing.yaml
backend/app/shared/: __init__.py  enums.py  types.py
backend/migrations/: env.py
backend/migrations/versions/: 1ed5026011d2_init_extensions.py
backend/tests/: test_config.py  test_db_session.py  test_main.py
backend/tests/modules/model_gateway/: test_capabilities.py  test_cost_calculator.py  test_gateway.py  test_gateway_integration.py  test_router.py  test_schema.py
backend/tests/shared/: test_types.py
docs/: architecture.md  progress.md  setup.md
docs/modules/: module_01.md  module_02.md  module_03.md  module_04.md  module_05.md  module_06.md  module_07a.md  module_07b.md  module_08.md  module_09.md  module_10.md  module_11.md  module_12.md
frontend/: README.md
infra/docker/: docker-compose.dev.yml
infra/docker/init-scripts/: 01-init.sql
