[project]
name = "xianyu-ai-service"
version = "0.1.0"
description = "Xianyu AI customer service system"
requires-python = ">=3.11,<3.12"

dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # 异步
    "anyio>=4.6.0",
    "httpx>=0.27.0",
    "websockets>=13.1",
    # 数据库
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.5",
    # Redis
    "redis[hiredis]>=5.1.0",
    # LLM
    "litellm>=1.52.0",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.0",
    # 可观测
    "langfuse>=2.50.0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    # 加密
    "cryptography>=43.0.0",
    "pyjwt>=2.9.0",
    # 飞书
    "lark-oapi>=1.4.0",
    # 工具
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "typing-extensions>=4.12.0",
    "orjson>=3.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "testcontainers>=4.8.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipython>=8.28.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RET"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
